--- a/JsonEditorUI/src/app/tree-view/tree-view.component.css
+++ b/JsonEditorUI/src/app/tree-view/tree-view.component.css
@@ -4,6 +4,7 @@
   overflow-x: auto;
   height: 91vh;
   overflow-y: auto;
+  overflow-x: auto;
 }
 
 @media screen and (max-width: 768px) {
@@ -62,4 +63,10 @@
   align-items: center;
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.toggleable {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
