--- a/JsonEditorUI/src/app/navbar/navbar.component.html
+++ b/JsonEditorUI/src/app/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <div class="topNav">
   <mat-toolbar class="mat-elevation-z6">
-    <img class="img-fluid" src="../../../assets/json-editor-logo.png">
+    <div class="logo">
+      <img class="img-fluid" src="../../../assets/logo.png">
+    </div>
 
     <form class="form-inline my-2 my-lg-0">
       <input [(ngModel)]="searchText" (input)="onInput()" class="form-control form-control-sm ml-2" type="search"
