--- a/JsonEditorUI/src/app/home/home.component.html
+++ b/JsonEditorUI/src/app/home/home.component.html
@@ -4,8 +4,8 @@
 
 <div class="container">
   <div class="editor-container">
-    <app-list></app-list>
+    <app-tree-view></app-tree-view>
     <!-- <app-json-view-component></app-json-view-component> -->
-     <app-text-area></app-text-area>
+    <app-text-area></app-text-area>
   </div>
 </div>
