--- a/JsonEditorUI/src/app/text-area/text-area.component.css
+++ b/JsonEditorUI/src/app/text-area/text-area.component.css
@@ -1,23 +1,35 @@
-textarea {
+.codeEditor {
   background: url(http://i.imgur.com/2cOaJ.png);
   background-attachment: local;
   background-repeat: no-repeat;
-  padding-left: 35px;
-  padding-top: 10px;
-  border-color: #ccc;
-
   font-size: 13px;
-  line-height: 16px;
-
   width: 100%;
   height: 100%;
   flex: 1;
   padding-left: 40px;
+  padding-top: 10px;
   box-sizing: border-box;
   resize: none;
   white-space: pre;
-  overflow: auto;
+  overflow-y: auto;
   line-height: 1.4em;
+}
+
+.codeEditor::before {
+  content: attr(placeholder);
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #999;
+  pointer-events: none;
+  display: block;
+  padding: 5px;
+  padding-left: 40px;
+}
+
+.codeEditor:focus::before,
+.codeEditor:not(:empty)::before {
+  display: none;
 }
 
 .textarea-wrapper {
@@ -25,8 +37,10 @@ textarea {
   background-image: linear-gradient(#F1F1F1 50%, #F9F9F9 50%);
   background-size: 100% 32px;
   background-position: left 10px;
-  width: 98%;
+  width: 100%;
   height: 100%;
+  overflow: auto;
+  max-height: 795px;
 }
 
 
@@ -34,15 +48,17 @@ textarea {
   margin: 10px;
   width: calc(100% - 20px); 
   height: calc(90% - 1px); 
+  width: 98%;
+  height: 90%;
   display: grid;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .editor-container {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
-}
+} */
 
 .buttons-container {
   display: flex;
@@ -68,10 +84,17 @@ textarea {
 .editor {
   display: flex;
   position: relative;
+  border-style: ridge;
+  height: 100%;
+  overflow: auto;
 }
 
 .error-snackbar .mat-simple-snackbar-action {
   color: red; 
   font-size: 24px;
+}
+
+::ng-deep .highlighted-text{
+  background-color: yellow;
 }
 
