--- a/JsonEditorUI/src/app/tree-view/tree-view.component.css
+++ b/JsonEditorUI/src/app/tree-view/tree-view.component.css
@@ -2,26 +2,15 @@
   margin: 10px;
   max-width: 387px;
   overflow-x: auto;
-  height: 91vh;
+  height: 92vh;
   overflow-y: auto;
   overflow-x: auto;
-}
-
-@media screen and (max-width: 768px) {
-  .treeTop {
-    max-height: 280vh;
-    max-width: 100%;
-  }
-}
-
-.clickable {
-  cursor: pointer;
 }
 
 .toggle-circle {
   width: 16px;
   height: 16px;
-  border: 1.5px solid blue;
+  border: 1.5px solid #404040;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -37,13 +26,13 @@
 }
 
 .toggle-circle.expanded {
-  background-color: blue;
+  background-color: #404040;
   color: white;
 }
 
 .toggle-circle.collapsed {
   background-color: white;
-  color: blue;
+  color: #404040;
 }
 
 .node-wrapper:hover {
