--- a/JsonEditorUI/src/app/tree-view/tree-view.component.html
+++ b/JsonEditorUI/src/app/tree-view/tree-view.component.html
@@ -1,36 +1,32 @@
-<div fxLayout="column" fxLayoutAlign="start stretch" class="treeTop">
-  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" fxFlex>
-
+<div class="treeTop">
+  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <!-- Tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding (click)="nodeClicked(node)"
-      [class.clickable]="isObject(node.name) && node.name.id">
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding (click)="nodeClicked(node)" class="clickable">
       <button mat-icon-button disabled></button>
-      <div class="li">
-        <div class="node-content leaf" [matTooltip]="node.level === 0 ? 'Asset Type' : node.attribute" matTooltipPosition="above">
-          <ng-container *ngIf="isObject(node.name); else simpleName">
-            <ng-container *ngIf="node.name.subsystem; else noSubsystem">
-              {{ node.name.subsystem }}
-            </ng-container>
-            <ng-template #noSubsystem>
-              {{ node.name.id ? 'Subsystem is not defined' : '' }}
-            </ng-template>
+      <div class="node-content" [matTooltip]="node.level === 0 ? 'Asset Type' : node.attribute" matTooltipPosition="above">
+        <ng-container *ngIf="isObject(node.name); else simpleName">
+          <ng-container *ngIf="node.name.subsystem; else noSubsystem">
+            {{ node.name.subsystem }}
           </ng-container>
-          <ng-template #simpleName>
-            {{ node.name }}
+          <ng-template #noSubsystem>
+            {{ node.name.id ? 'Subsystem is not defined' : '' }}
           </ng-template>
-        </div>
+        </ng-container>
+        <ng-template #simpleName>
+          {{ node.name }}
+        </ng-template>
       </div>
     </mat-tree-node>
 
     <!-- Tree node template for expandable nodes -->
     <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
       <div class="toggleable" (click)="treeControl.toggle(node)">
-        <div class="toggle-circle" [class.expanded]="treeControl.isExpanded(node)" [class.collapsed]="!treeControl.isExpanded(node)">
+        <div class="toggle-circle" [class.expanded]="treeControl.isExpanded(node)">
           <mat-icon>
             {{ treeControl.isExpanded(node) ? 'remove' : 'add' }}
           </mat-icon>
         </div>
-        <div class="node-content leaf" [matTooltip]="node.level === 0 ? 'Asset Type' : node.attribute" matTooltipPosition="above">
+        <div class="node-content" [matTooltip]="node.level === 0 ? 'Asset Type' : node.attribute" matTooltipPosition="above">
           <ng-container *ngIf="isObject(node.name); else simpleName">
             <ng-container *ngIf="node.name.subsystem; else noSubsystem">
               {{ node.name.subsystem }}
@@ -45,6 +41,5 @@
         </div>
       </div>
     </mat-tree-node>
-
   </mat-tree>
 </div>
